Fix javadoc warnings.